4 sept changes auth and profile page