@@ -57,6 +57,6 @@ public class UserSocialLinkService {
     }
 
     private boolean isBlank(String value) {
-        return value == null || value.trim().isEmpty();
+        return value == null || value.isBlank();
     }
 }
